--- a/_posts/it/2018-10-21-IT-tips.md
+++ b/_posts/it/2018-10-21-IT-tips.md
@@ -5,6 +5,7 @@ categories: [it]
 tags: [technology]
 toc: 1
 snippet: 1
+date: 2019-08-09
 ---
 
 This note contains all tips in IT (tips in using apps, webs,...)
@@ -39,6 +40,12 @@ Cách đơn giản để download video từ facebook, đặc biệt là các vi
 - Chuột phải vào video chọn "Save video as..." để lưu về máy.
 
 ## Windows
+
+### Cortana uses Chrome instead of Edge
+
+- Download and install [this app](https://github.com/da2x/EdgeDeflector/releases) (reinstall it after every update of Windows).
+- Choose EdgeDeflector as the default web browser if it asks.
+- Install [this extension](https://chrome.google.com/webstore/detail/chrometana-redirect-bing/) in Chrome to force to redirect from Bing to Google Search Engine.
 
 ### Thay đổi directory mặc định trong PowerShell
 
