--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -13,17 +13,113 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 
 {% include toc.html %}
 
-## Mean - Median - Mode
+## References
+
+- Book: **Understandable Statistics**- Brase Brase BOOK.pdf
+- Book: **Think Stats 2** (with Python) - Allen B. Downey.
+- Interactive book: **[Seeing Theory](https://seeing-theory.brown.edu)**.
+- 
+
+## Fundamental
+
+### A Random Variable
+
+- A Random Variable is a set of possible values from a random experiment.
+  - The set of possible values is called the **Sample Space**.
+- A Random Variable has a whole set of values ... and it could take on any of those values, randomly.
+- Ex: X = {0, 1, 2, 3} and X could be 0, 1, 2, or 3 randomly.
+- **Probability**: P(X = value) = probability of that value
+- Random Variables can be either Discrete or Continuous:
+
+
+### Mean - Median - Mode
 
 - Có sự khác biệt giữa rời rạc và liên tục (continuous probability distribution).
+- Nếu rời rạc thì dễ hiểu rồi.
 - Nếu liên tục: 
-  - Mean: Cái giúp cân bằng ếu để trên 1 cái tam giác.
-  - Median: Cái chia đôi diện tích.
-  - Mode: Cái cao nhất!
+  - **Mean**: Cái giúp cân bằng ếu để trên 1 cái tam giác.
+  - **Median**: Cái chia đôi diện tích.
+  - **Mode**: Cái cao nhất!
+
+### Expected value & Variance
+
+- **Expected value** = Mean = (intuitively) the long-run average of occurrences.
+  - Discrete: $\mu = E(X) = \Sigma[xP(x)]$
+- **Variance** = Whereas expectation provides a measure of centrality, the variance of a random variable quantifies the spread of that random variable's distribution.
+
+  $$
+  \text{Var}(X) = \text{E}[(X - \text{E}[X])^2]
+  $$
+
+  - Tưởng tượng nó giống trung bình khoảng cách khác biệt giữa $\bar{y}$ và $y$.
+
+### Probability mass function (PMF)
+
+- The probability distribution of a **discrete** random variable is called the probability function or the probability mass function (aka PMF).
+
+  $$
+  p_X(x) = P(X=x)
+  $$
+
+- Properties:
+  - $0\le p\_X(x) \le 1$.
+  - $\Sigma\_x p\_X(x)=1$.
+
+### Cumulative distribution function (CDF)
+
+- The CDF of a real-valued random variable X, or just distribution function of X, evaluated at x, is the probability that X will take a value less than or equal to x.
+
+  $$
+  \begin{align}
+  F_X(x) &= P(X\le x) = (\Sigma_{t\le x}f(t)) = (\int_{-\infty}^xf_X(t)dt). \\
+  P(a<X\le b) &= F_X(b) - F_X(a). \\
+  \bar{F}_X(x) &= P(X>x) = 1-F_X(x).
+  \end{align}
+  $$
+
+  - **Cummylative** = lũy tích -> tích lũy xác suất cho đến $x$.
+
+- **Properties**:
+  - 0 \le $F\_X(x) \le 1$
+  - CDF a *non-decreasing function*, or *monotonically increasing* because we are adding up the probabilities for each outcome.
+  - CDF is said to be a continuous function, (it has no "holes" in the graph)
+  - $\lim\_{x\to -\infty}F\_X(x)=0$, $\lim\_{x\to +\infty}F\_X(x)=1$
+
+- **Question** - Tại sao $a<X$ mà không phải là $a\le X$? -> tại vì nó đã bị trừ trong cái $-F\_X(a)$.
+- Dấu "=" chỉ quan trọng với discrete variable, continuous variable không quan trọng lắm!
 
 
-## Normal distribution
+### Probability density function (PDF)
+
+- $f\_X(x) = \frac{dF\_X(x)}{dx}$
+- Relationship between a PDF (above) and the CDF (below).
+
+  ![Relationship betwee a PDF and a CDF]({{img-url}}/pdf-cdf.svg)
+
+
+## Distributions
+
+### Normal distribution
 
 - Bài viết hay: [mathisfun](https://www.mathsisfun.com/data/standard-normal-distribution.html)
 - Bài viết chi tiết khác: [file](https://www.westga.edu/academics/research/vrc/assets/docs/the_normal_distribution_notes.pdf) (đã backup ở *ML-Data\materials\statistics\distributions\the_normal_distribution_notes.pdf*)
-- Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$ lại là 68%? -> Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
+- Đặc trưng: mean ($\mu$) and standard deviation ($\sigma$)
+- Nếu một biến ngẫu nhiên X có phân phối chuẩn thì: $X\sim \mathcal{N}(\mu, \sigma)$.
+- Ví dụ của "**not** a normal distribution": [xúc xắc](https://brilliant.org/wiki/central-limit-theorem/), điểm thi của học sinh lớp 9 khi làm đề lớp 8.
+- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)**
+  - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
+  - Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$ lại là 68%? -> Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
+
+### Binomial distribution
+
+
+
+## Central Limit Theorem
+
+- Định lý giới hạn trung tâm.
+- Def (ref to [brilliant](https://brilliant.org/wiki/central-limit-theorem/)): The central limit theorem is a theorem about **independent random variables**, which says roughly that the probability distribution of the average of independent random variables will **converge to a normal distribution**, as the number of observations increases. The somewhat surprising strength of the theorem is that (under certain natural conditions) there is essentially no assumption on the probability distribution of the variables themselves; the **theorem remains true no matter what the individual probability distributions are**.
+
+
+
+
+
