--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -18,7 +18,6 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 - Book: **Understandable Statistics**- Brase Brase BOOK.pdf
 - Book: **Think Stats 2** (with Python) - Allen B. Downey.
 - Interactive book: **[Seeing Theory](https://seeing-theory.brown.edu)**.
-- 
 
 ## Fundamental
 
@@ -55,7 +54,7 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 
 ### Probability mass function (PMF)
 
-- The probability distribution of a **discrete** random variable is called the probability function or the probability mass function (aka PMF).
+- The probability distribution of a **discrete** random variable is called the **probability function** or the **probability mass function** (aka PMF).
 
   $$
   p_X(x) = P(X=x)
@@ -80,7 +79,7 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
   - **Cummylative** = lũy tích -> tích lũy xác suất cho đến $x$.
 
 - **Properties**:
-  - 0 \le $F\_X(x) \le 1$
+  - $0 \le F\_X(x) \le 1$
   - CDF a *non-decreasing function*, or *monotonically increasing* because we are adding up the probabilities for each outcome.
   - CDF is said to be a continuous function, (it has no "holes" in the graph)
   - $\lim\_{x\to -\infty}F\_X(x)=0$, $\lim\_{x\to +\infty}F\_X(x)=1$
