--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -211,3 +211,6 @@ Tu as de vieux meubles.
 - J'ai froid/chaude **à** + nơi bị lạnh
   - J'ai froid/chaude à la tête.
 - Je viens prendre de vos nouvelles = Tôi muốn cập nhật tình hình của bạn, đại loại vậy!
+- **servir à** + verbe = to be used for?
+  - **À** quoi **sert** cet objet? = Vật này được dùng làm gì?
+  - Cet apareil **sert à** prendre des photos.
