--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -5,6 +5,7 @@ categories: [math, ml, data]
 tags: [statistics]
 math: 1
 toc: 1
+date: 2019-08-11
 ---
 
 {% assign img-url = '/images/posts/stats' %}
@@ -37,9 +38,9 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 - Cumulative distribution function (CDF)
 - or probability mass function (PMF) (statement from Wikipedia)
  2. But what confirm is:
-- Discrete case: Probability Mass Function (PMF)
-- Continuous case: Probability Density Function (PDF)
-- Both cases: Cumulative distribution function (CDF)
+- **Discrete case**: Probability Mass Function (PMF)
+- **Continuous case**: Probability Density Function (PDF)
+- **Both cases**: Cumulative distribution function (CDF)
  3. Probability at certain $x$ value, $P(X = x)$ can be directly obtained in:
 - PMF for discrete case
 - PDF for continuous case
@@ -49,7 +50,7 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 
 **In terms of Acquisition and Plot Generation Method**
 
- 1. Collected data appear as discrete when:
+ 1. Collected data appear as **discrete** when:
 - The measurement of a subject is naturally discrete type, such as numbers resulted from dice rolled, count of people.
 - The measurement is digitized machine data, which has no intermediate values between quantized levels due to sampling process.
 - In later case, when resolution higher, the measurement is closer to analog/continuous signal/variable.
@@ -81,16 +82,15 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 
 ### Random Variable (RV)
 
-- A **Random Variable** is a set of possible values from a random experiment. $\Leftarrow$ Chỉ thích hợp với discrete RV mà thôi!
+- **Discrete RV** = a set of possible values from a random experiment.
 - **Continuous RV** ([ref](https://www.quora.com/What-is-the-difference-between-a-probability-density-function-and-a-cumulative-distribution-function) $\Leftarrow$ good explanation!)
-  - If we want to define the probability of an event in which the *random variable takes a specific value*, the probability for *this event will usually be zero* (<mark>vì khoảng là liên tục, chia ra $\infty$ khoảng nên là 0</mark>)
+  - If we want to define the probability of an event in which the *random variable takes a specific value*, the probability for *this event will usually be zero* $P(X=x)=0$ (<mark>vì khoảng là liên tục, chia ra $\infty$ khoảng nên là 0</mark>)
   - Instead, we define the probability of events in which <mark>the random variable takes a value within a specific interval</mark> $\Rightarrow$ We can use CDF (Cumulative Distribution Function).
-  - **[??]** **Ví dụ của continuous RV:**  
+  - **[??]**{:.tred} **Ví dụ của continuous RV:** ([ref](http://www.hamilton.ie/ollie/EE304/RV2.pdf)) the speed of car; The concentration of a chemical in a water sample; Measurement Errors; Electricity consumption in kilowatt hours.
 - The set of possible values is called the **Sample Space**.
-- A Random Variable has a whole set of values ... and it could take on any of those values, randomly.
+- A Random Variable has a whole set of values ... and <mark>it could take on any of those values, randomly<mark>.
 - Ex: X = {0, 1, 2, 3} and X could be 0, 1, 2, or 3 randomly.
 - **Probability**: P(X = value) = probability of that value
-- Random Variables can be either Discrete or Continuous:
 
 
 ### Mean - Median - Mode
@@ -102,29 +102,10 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
   - **Median**: Cái chia đôi diện tích.
   - **Mode**: Cái cao nhất!
 
-### Expected value & Variance
-
-Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown.edu/basic-probability/index.html).
-
-**Expected value** = Mean = (intuitively) the <mark>long-run average of occurrences</mark>.
-- *Discrete*: $\mu = E(X) = \Sigma[xP(x)]$
-- *Continuous*: $\mu=E(X) = \int\_{\mathbb{R}} xf\_X(x) dx$ where $f\_X$ is PDF (probability density function)
-
-**[??]**: **Hiểu công thức của Continuous như thế nào?** (Discrete thì dễ rồi, nó là *weight\*value* thôi).
-  - Trước hết phải hiểu PDF là gì? (Xem bên dưới)
-  - Sau khi hiểu $f\_X$ rồi thì $f\_X(x)$ cũng là xác suất của $X$ tại $x$ ($P(X=x)$).
-
-**Variance** = Whereas expectation provides a measure of centrality, the variance of a random variable quantifies the <mark>spread of that random variable</mark>'s distribution.
-  - Tưởng tượng nó giống trung bình khoảng cách khác biệt giữa $\bar{y}$ và $y$.
-
-  $$
-  \text{Var}(X) = \text{E}[(X - \text{E}[X])^2]
-  $$
-
 ### Probability mass function (PMF)
 
 - [Good explanation](https://www.quora.com/What-is-the-difference-between-a-probability-density-function-and-a-cumulative-distribution-function).
-- The probability distribution of a **discrete** random variable is called the **probability function** or the **probability mass function** (aka PMF).
+- The probability distribution of a **discrete** random variable is called the **probability function** or the **probability mass function** (aka PMF). <mark>$\Rightarrow$ chỉ có cho discrete, còn liên tục thì $P(X=x)=0$<mark>.
 
   $$
   p_X(x) = P(X=x)
@@ -154,7 +135,7 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
   - CDF is said to be a continuous function, (it has no "holes" in the graph)
   - $\lim\_{x\to -\infty}F\_X(x)=0$, $\lim\_{x\to +\infty}F\_X(x)=1$
 
-- **Question** - Tại sao $a<X$ mà không phải là $a\le X$? -> tại vì nó đã bị trừ trong cái $-F\_X(a)$.
+- **[??]**{:.tred} - Tại sao $a<X$ mà không phải là $a\le X$? $\Rightarrow$ tại vì nó đã bị trừ trong cái $-F\_X(a)$.
 - Dấu "=" chỉ quan trọng với discrete variable, continuous variable không quan trọng lắm!
 
 
@@ -162,28 +143,97 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 
 - PDF or **density** of a continuous random variable: <mark>$f\_X(x)$</mark>
 - The PDF is used to <mark>specify the probability of the random variable</mark> falling within a particular range of values
-  - Its value at any given point is actually meaningless: trên khoảng thì có xác suất là $\int$ trên khoảng đó nhưng tại 1 điểm thì ko có xác suất (nếu xét theo ý tưởng chia cho $\infty$ miền nhỏ)! **Tuy nhiên**, ta vẫn có thể tính xác suất của 1 biến continuous X tại 1 điểm: <mark>$P(X=x) = f(x)$</mark>.
+  - Its value at any given point is actually meaningless: trên khoảng thì có xác suất là $\int$ trên khoảng đó nhưng tại 1 điểm thì ko có xác suất (nếu xét theo ý tưởng chia cho $\infty$ miền nhỏ)! **Tuy nhiên**, ta vẫn có thể tính xác suất của 1 biến continuous X tại 1 điểm:
+
+$$
+\begin{align}
+f_X(x) &=\lim_{\Delta \rightarrow 0^+} \frac{P(x < X \leq x+\Delta)}{\Delta}. \\
+P(x < X \leq x+\Delta)&=F_X(x+\Delta)-F_X(x). \\
+f_X(x) &=\lim_{\Delta \rightarrow 0} \frac{F_X(x+\Delta)-F_X(x)}{\Delta} =\frac{dF_X(x)}{dx}=F'_X(x)
+\end{align}
+$$
+
+- The PDF is the **density** of probability rather than the probability **mass**
 - **Properties**:
-  - $f\_X(x) = \frac{dF\_X(x)}{dx}$
-- Relationship between a PDF (hình trên) and the CDF (hình dưới). [Ref](https://www.internalpointers.com/post/cumulative-distribution-function-cdf).
+  - $f\_X(x) = F'\_X(x)$
+  - $f(x)\ge 0, \forall x$
+  - $\int\_{-\infty}^{\infty}f(x) dx =1$
+  - $P(a\le X\le b)= \int\_a^bf(x)dx, \forall a,b$ (<mark>probabilities = area under the curve $f(x)$</mark>)
+
+  $$
+  P(a\le x \le b) = P(a<x<b) = P(a<x\le b) = P(a\le x<b).
+  $$
+
+<div class="row d-flex" markdown="1">
+<div class="col s12 l8" markdown="1">
+- **[??]**{:.tred} Relationship between a PDF (hình trên) and the CDF (hình dưới). [Ref](https://www.internalpointers.com/post/cumulative-distribution-function-cdf).
   - CDF $\Rightarrow$ trên graph chỉ là tại 1 điểm nhưng giá trị thật ra là trên 1 khoảng (trên PMF hoặc PDF)
   - PDF $\Rightarrow$ diện tích của 1 dãy tới điểm đang xét / tổng diện tích!
+</div>
+<div class="col s12 l4" markdown="1">
+![Relationship betwee a PDF and a CDF]({{img-url}}/pdf-cdf.jpg){:.w-200}
+</div>
+</div>
 
-  ![Relationship betwee a PDF and a CDF]({{img-url}}/pdf-cdf.jpg){:.w-300}
 - Other ideas/explanation: [[mathinsight](https://mathinsight.org/probability_density_function_idea)]
+
+### Expected value
+
+Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown.edu/basic-probability/index.html).
+
+**Expected value** = Mean = (intuitively) the <mark>long-run average of occurrences</mark>.
+- *Discrete*: $\mu = E(X) = \Sigma[xP(x)]$
+- *Continuous*: $\mu=E(X) = \int\_{\mathbb{R}} xf\_X(x) dx$ where $f\_X$ is PDF (probability density function)
+
+**[??]**{:.tred}: *Hiểu công thức của Continuous như thế nào?* (Discrete thì dễ rồi, nó là *weight\*value* thôi).
+  - Trước hết phải hiểu PDF là gì? (Xem bên dưới)
+  - Sau khi hiểu $f\_X$ rồi thì $f\_X(x)$ cũng là xác suất của $X$ tại $x$ (Tượng trưng là $P(X=x)$ nhưng P này =0 trong trường hợp X continuous này!).
+
+### Variance
+
+**Variance** = Whereas expectation provides a measure of centrality, the variance of a random variable quantifies the <mark>spread of that random variable</mark>'s distribution.
+  - Tưởng tượng nó giống trung bình khoảng cách khác biệt giữa $\bar{y}$ và $y$.
+
+  $$
+  \text{Var}(X) = \text{E}[(X - \text{E}[X])^2] = EX^2 - (EX)^2
+  $$
+
+**[??]**{:.tred} *Hiểu hai dấu bằng trên như thế nào?*
+
+- *Dấu bằng thứ 1*: ta sẽ xem xét sự khác biệt giữa X và giá trị trung bình (mong muốn) của nó xem sao. Tuy nhiên, có nhiều cái X khác nhau (thử tưởng tượng trường hợp rời rạc), nên ta phải lấy trung bình của nó.
+- *Dấu bằng thứ 2*: Liệu sau khi $X^2$ thì trung bình của nó có giống với trước khi nó bình phương hay không?
+
+![Understand Bias and Variance]({{img-url}}/variance-bias.png){:.w-750}
+
+**[??]**{:.tred} *Vẫn chưa hiểu mối liên quan (trực quan) giữa 2 dấu bằng là sao?* (về mặt toán học thì có thể chứng minh được nhưng về mặt ý nghĩa trực quan thì giải thích làm sao?)
+
+**Hiểu trực quan**: variance ($\sigma^2$) và *standard deviation* ($\sigma$) cho chúng ta biết mức độ phân tán của dữ liệu so với mean của chúng. Nếu variance lớn tức mức độ phân tán cao (nhìn vào graph của normal distribution để hiểu thêm).
 
 ## Distributions
 
+### What's a distribution?
+
+**[??]**{:.tred} *Why <mark>a random variable has a probability distribution</mark>?*
+
 ### Normal distribution
+
+<div class="row d-flex" markdown="1">
+<div class="col s12 l7" markdown="1">
 
 - Bài viết hay: [mathisfun](https://www.mathsisfun.com/data/standard-normal-distribution.html)
 - Bài viết chi tiết khác: [file](https://www.westga.edu/academics/research/vrc/assets/docs/the_normal_distribution_notes.pdf) (đã backup ở *the\_normal\_distribution\_notes.pdf*)
-- Đặc trưng: mean ($\mu$) and standard deviation ($\sigma$)
+- Đặc trưng: **mean** ($\mu$) and **standard deviation** ($\sigma$) (*Deviation means "distance from the mean".*)
 - Nếu một biến ngẫu nhiên X có phân phối chuẩn thì: $X\sim \mathcal{N}(\mu, \sigma)$.
 - Ví dụ của "**not** a normal distribution": [xúc xắc](https://brilliant.org/wiki/central-limit-theorem/), điểm thi của học sinh lớp 9 khi làm đề lớp 8.
 - **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)**
   - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
   - Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
+
+</div>
+<div class="col s12 l5" markdown="1">
+![Normal Distribution]({{img-url}}/nd.png)
+</div>
+</div>
 
 ### Binomial distribution
 
