--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -213,7 +213,7 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 
 ### What's a distribution?
 
-**[??]**{:.tred} *Why <mark>a random variable has a probability distribution</mark>?*
+**[??]**{:.tred} *Why <mark>a random variable has a **probability distribution**</mark>?* $\Rightarrow$ Mỗi RV có thể nhận bất kỳ giá trị nào trong sample space của nó (Ví dụ tung 2 súc sắc thì khả năng cao sẽ được 7 nút hơn là được 12 nút, do expected value sẽ là 3.5 cho mỗi con ss). Do đó, mỗi CV  cũng sẽ có 1 probability distribution riêng ám chỉ có bao nhiêu khả năng mà X đó sẽ nhận giá trị x trong cái sample range kia ([ref more](https://mathinsight.org/probability_distribution_idea)).
 
 ### Normal distribution
 
@@ -227,7 +227,7 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 - Ví dụ của "**not** a normal distribution": [xúc xắc](https://brilliant.org/wiki/central-limit-theorem/), điểm thi của học sinh lớp 9 khi làm đề lớp 8.
 - **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)**
   - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
-  - Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
+  - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
 
 </div>
 <div class="col s12 l5" markdown="1">
