--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -34,9 +34,9 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 **Distribution Function**
 
  1. The probability distribution function / probability function has ambiguous definition. They may be referred to:
-- Probability density function (PDF) 	
-- Cumulative distribution function (CDF)
-- or probability mass function (PMF) (statement from Wikipedia)
+- Probability density function (PDF) $\Rightarrow f_X(x)$
+- Cumulative distribution function (CDF) $\Rightarrow F_X(x)$
+- or probability mass function (PMF) $\Rightarrow p_X(x)$
  2. But what confirm is:
 - **Discrete case**: Probability Mass Function (PMF)
 - **Continuous case**: Probability Density Function (PDF)
@@ -98,7 +98,7 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 - Có sự khác biệt giữa rời rạc và liên tục (continuous probability distribution).
 - Nếu rời rạc thì dễ hiểu rồi.
 - Nếu liên tục: 
-  - **Mean**: Cái giúp cân bằng ếu để trên 1 cái tam giác.
+  - **Mean**: Cái giúp cân bằng nếu để trên 1 cái tam giác.
   - **Median**: Cái chia đôi diện tích.
   - **Mode**: Cái cao nhất!
 
@@ -141,7 +141,7 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 
 ### Probability density function (PDF)
 
-- PDF or **density** of a continuous random variable: <mark>$f\_X(x)$</mark>
+- PDF or **density** of a continuous random variable: <mark>$f_X(x)$</mark>
 - The PDF is used to <mark>specify the probability of the random variable</mark> falling within a particular range of values
   - Its value at any given point is actually meaningless: trên khoảng thì có xác suất là $\int$ trên khoảng đó nhưng tại 1 điểm thì ko có xác suất (nếu xét theo ý tưởng chia cho $\infty$ miền nhỏ)! **Tuy nhiên**, ta vẫn có thể tính xác suất của 1 biến continuous X tại 1 điểm:
 
@@ -160,9 +160,11 @@ $$
   - $\int\_{-\infty}^{\infty}f(x) dx =1$
   - $P(a\le X\le b)= \int\_a^bf(x)dx, \forall a,b$ (<mark>probabilities = area under the curve $f(x)$</mark>)
 
-  $$
-  P(a\le x \le b) = P(a<x<b) = P(a<x\le b) = P(a\le x<b).
-  $$
+<div class="p-mark">
+$$
+P(a\le x \le b) = P(a<x<b) = P(a<x\le b) = P(a\le x<b).
+$$
+</div>
 
 <div class="row d-flex" markdown="1">
 <div class="col s12 l8" markdown="1">
@@ -194,9 +196,11 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 **Variance** = Whereas expectation provides a measure of centrality, the variance of a random variable quantifies the <mark>spread of that random variable</mark>'s distribution.
   - Tưởng tượng nó giống trung bình khoảng cách khác biệt giữa $\bar{y}$ và $y$.
 
+  <div class="p-mark">
   $$
   \text{Var}(X) = \text{E}[(X - \text{E}[X])^2] = EX^2 - (EX)^2
   $$
+  </div>
 
 **[??]**{:.tred} *Hiểu hai dấu bằng trên như thế nào?*
 
@@ -213,21 +217,38 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 
 ### What's a distribution?
 
-**[??]**{:.tred} *Why <mark>a random variable has a **probability distribution**</mark>?* $\Rightarrow$ Mỗi RV có thể nhận bất kỳ giá trị nào trong sample space của nó (Ví dụ tung 2 súc sắc thì khả năng cao sẽ được 7 nút hơn là được 12 nút, do expected value sẽ là 3.5 cho mỗi con ss). Do đó, mỗi CV  cũng sẽ có 1 probability distribution riêng ám chỉ có bao nhiêu khả năng mà X đó sẽ nhận giá trị x trong cái sample range kia ([ref more](https://mathinsight.org/probability_distribution_idea)).
+**[??]**{:.tred} *Why <mark>a random variable has a probability distribution</mark>?* $\Rightarrow$ Mỗi RV có thể nhận bất kỳ giá trị nào trong sample space của nó (Ví dụ tung 2 súc sắc thì khả năng cao sẽ được 7 nút hơn là được 12 nút, do expected value sẽ là 3.5 cho mỗi con ss). Do đó, mỗi CV  cũng sẽ có 1 probability distribution riêng ám chỉ có bao nhiêu khả năng mà X đó sẽ nhận giá trị x trong cái sample range kia ([ref more](https://mathinsight.org/probability_distribution_idea)).
+
+**[??]**{:.tred} *How to find feature distribution in Python*?
+
+~~~ python
+DataFrame.hist(bins=10)
+#Make a histogram of the DataFrame and then check
+~~~
 
 ### Normal distribution
 
 <div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+![Normal Distribution: PDF]({{img-url}}/nd-1.png){:.w-500}
+*Probability density function*
+</div>
+<div class="col s12 l6" markdown="1">
+![Normal Distribution: CDF]({{img-url}}/nd-2.png){:.w-500}
+*Cumulative distribution function*
+</div>
+</div>
+
+<div class="row d-flex" markdown="1">
 <div class="col s12 l7" markdown="1">
 
+- **Continuous** probability distribution.
+- **Informally called** <mark>bell curve</mark> (tuy nhiên còn nhiều distribution khác cũng có bell shape!)
 - Bài viết hay: [mathisfun](https://www.mathsisfun.com/data/standard-normal-distribution.html)
 - Bài viết chi tiết khác: [file](https://www.westga.edu/academics/research/vrc/assets/docs/the_normal_distribution_notes.pdf) (đã backup ở *the\_normal\_distribution\_notes.pdf*)
 - Đặc trưng: **mean** ($\mu$) and **standard deviation** ($\sigma$) (*Deviation means "distance from the mean".*)
 - Nếu một biến ngẫu nhiên X có phân phối chuẩn thì: $X\sim \mathcal{N}(\mu, \sigma)$.
 - Ví dụ của "**not** a normal distribution": [xúc xắc](https://brilliant.org/wiki/central-limit-theorem/), điểm thi của học sinh lớp 9 khi làm đề lớp 8.
-- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)**
-  - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
-  - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
 
 </div>
 <div class="col s12 l5" markdown="1">
@@ -235,14 +256,96 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 </div>
 </div>
 
+- Trò **Quincunx** cho 1 ví dụ của cái normal dist này (các viên bi rơi ngẫu nhiên xuống 1 tam giác có nhiều chướng ngại)
+- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)** (**Empirical rule**)
+  - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
+  - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
+- **Standard normal distribution**: when $\mu=0, \sigma=1$.
+
+  ![Standardizing]({{img-url}}/standardizing.svg)
+  *Cách standardize này <mark>dùng công thức tính z-score</mark> là được!*
+- **[??]**{:.tred} *Tại sao phải standardize*? $\Rightarrow$ It can help us make decisions about our data. 
+  - Giả dụ sau khi có kết quả thi, toàn điểm trên thang 100 nhưng khá thấp. Nếu chúng ta dựa vào đó thì không biết nên lấy điểm sàn là bao nhiêu. Tuy nhiên khi chuyển về standard normal dist (dựa trên điểm trung bình của đám sinh viên đã thi), ta có thể chọn được điểm sàn rõ ràng và công bằng hơn! ([ref](https://www.mathsisfun.com/data/standard-normal-distribution.html))
+- **PDF**:
+
+<div class="p-mark">
+$$
+{\displaystyle f(x\mid \mu ,\sigma ^{2})={\frac {1}{\sqrt {2\pi \sigma ^{2}}}}e^{-{\frac {(x-\mu )^{2}}{2\sigma ^{2}}}}}
+$$
+</div>
+
+**[??]**{:.tred} *Dấu hiệu nhận biết của normal distribution là gì?*
+
+- Nếu một biến ngẫu nhiên mà chưa được biết distribution gì thì ta thường dùng cái ND này!
+- Nhờ vào **Central Limit Theorem**, càng nhiều observations thì có khả năng cao X càng converge về ND.
+
+~~~ python
+import numpy as np
+
+# raw random samples from a normal distribution
+np.random.normal(loc=0, scale=1.0, size=None)
+
+# loc = mean, scale = sd, (size)
+# returns ndarray/scalar
+~~~
+
+- Plot/more examples on [numpy](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.random.normal.html).
+
+### Z-Scores
+
+- Liên quan đến **Normal distribution**!
+- Khi ta muốn biết mình đứng thứ mấy trong lớp sau khi có điểm bài kiểm tra?
+- One statistic that is used to measure the position of a data value w.r.t. other data values is known as the z-score.
+- **z-score** of a x = number of SD from the mean to that x.
+
+  <div class="p-mark">
+  $$
+  z_X = \dfrac{x-\mu}{\sigma}.
+  $$
+  </div>
+
+- z-score is dimensionless measure.
+- z-score (>0) càng lớn thì x càng nằm trong top cao so với trung bình.
+- z-score (<0) càng bé thì x càng nằm trong top thấp so với trung bình.
+- EX: sau khi tính điểm trung bình của 2 đợt thi, lần 1 $z\_x=0.875$, lần 2 $z\_x=1.25$ thì ta sẽ biết được (nếu so với các bạn cùng lớp), lần 2 chúng ta làm bài tốt hơn nhiều!
+
 ### Binomial distribution
 
+- **Discrete** probability distribution.
+- When a RV has only 2 independent outcomes (giống như tung đồng xu). Each trial has the same probability.
+- **Usage**: The binomial distribution is often used in social science statistics as a building block for models for dichotomous outcome variables, like whether a Republican or Democrat will win an upcoming election, whether an individual will die within a specified period of time, etc ([ref](https://www.investopedia.com/terms/b/binomialdistribution.asp)).
+- The binomial distribution determines the probability of observing a specified number of successful outcomes in a specified number of trials.
+- **Expected value** (mean): $E = n\_{trials} \times p\_{success}$
+- **Variance**: $np(1-p)$ where $p$ is the proba of the success
+
+**[??]**{:.tred} *Why we have E and EX like above?*
+
+- Expected: nếu ta tung đồng xu 100 lần, hẳn ta muốn thấy mặt ngửa 50% (= $n\times p$) số đó. Dễ hiểu!
+- Variance: 
+
+### Poisson distribution
+
+- **Discrete** probability distribution.
+- The poisson distribution is used to calculate the **number of events** that might <mark>occur in a continuous time interval</mark>.
+- Ex: how many phone calls might occur at any particular time period or how many people might show up in a queue.
+- **PMF**:
+
+<div class="p-mark">
+$$
+p_X(\text{k events in interval}) = e^{-\lambda}\dfrac{\lambda^k}{k!}
+$$
+</div>
+
+  - $\lambda$ is the average number of events per interval
+  - $k$ takes values $0,1,2,\ldots$
 
 
 ## Central Limit Theorem
 
 - Định lý giới hạn trung tâm.
 - Def (ref to [brilliant](https://brilliant.org/wiki/central-limit-theorem/)): The central limit theorem is a theorem about **independent random variables**, which says roughly that the probability distribution of the average of independent random variables will **converge to a normal distribution**, as the number of observations increases. The somewhat surprising strength of the theorem is that (under certain natural conditions) there is essentially no assumption on the probability distribution of the variables themselves; the **theorem remains true no matter what the individual probability distributions are**.
+
+**[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/)
 
 
 
