--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -14,6 +14,8 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 
 {% include toc.html %}
 
+{% include more.html content="[Go to Stats note 2](/stats-2)." %}
+
 ## References
 
 - Book: **Understandable Statistics**- Brase Brase BOOK.pdf
