--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -8,6 +8,10 @@ toc: 1
 
 Only for French.
 
+## Question
+
+- Pourquoi **mon livre** préféré **est-il** dans la poubelle ?
+
 ## lui / leur
 
 - V + to him/to her/to it = lui + V
