--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -94,6 +94,8 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 - Ex: X = {0, 1, 2, 3} and X could be 0, 1, 2, or 3 randomly.
 - **Probability**: P(X = value) = probability of that value
 
+**[??]**{:.tred} *Nếu X là 1 RV, vậy $X^2$ có thể được hiểu thế nào? Lấy ví dụ?* / *Multiplication of two random variable?*
+
 
 ### Mean - Median - Mode
 
