--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -84,6 +84,7 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 
 ### Random Variable (RV)
 
+- Check [this](https://www.mathsisfun.com/data/random-variables.html) for a simple explanation and example.
 - **Discrete RV** = a set of possible values from a random experiment.
 - **Continuous RV** ([ref](https://www.quora.com/What-is-the-difference-between-a-probability-density-function-and-a-cumulative-distribution-function) $\Leftarrow$ good explanation!)
   - If we want to define the probability of an event in which the *random variable takes a specific value*, the probability for *this event will usually be zero* $P(X=x)=0$ (<mark>vì khoảng là liên tục, chia ra $\infty$ khoảng nên là 0</mark>)
@@ -94,7 +95,36 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 - Ex: X = {0, 1, 2, 3} and X could be 0, 1, 2, or 3 randomly.
 - **Probability**: P(X = value) = probability of that value
 
-**[??]**{:.tred} *Nếu X là 1 RV, vậy $X^2$ có thể được hiểu thế nào? Lấy ví dụ?* / *Multiplication of two random variable?*
+**[??]**{:.tred} *Nếu $X$ là 1 RV, vậy $X^2$ có thể được hiểu thế nào? Lấy ví dụ?* / *Multiplication of two random variable?*. Nếu $X$ là "Số điểm trên mặt sau khi tung một con súc sắc." thì $2X = X+X$ là gì và $X^2$ là gì?
+
+<ul class="collapsible" data-collapsible="accordion">
+<li>
+<div class="collapsible-header" markdown="1"><i class="material-icons">face</i>
+Trả lời câu hỏi ở trên
+</div>
+<div class="collapsible-body" markdown="1">
+
+- **Convolution** (tính chập): suppose $Z=X+Y$ and $X=x$ then the event $Z=z$ is equivalent to **union** of $(X=x)$ **and** $(Y=z-x)$.
+
+Xét $P(X=1)=\frac{1}{6}$ thì khi đó $Z=3X=X+X+X$ thì $P(Z=3)=?$. Có phải là 
+
+X=1 and X=1 and X=1?
+
+Cón nếu Z=5 và Z=2X=X+X?
+
+(X=1 and X=4) or (X=2 and X=2)?
+
+P(and) = nhân, P(or) = cộng!
+
+Ta có thể chuyển câu hỏi về *what is the distribution of Z?*: As a simple example consider X and Y to have a uniform distribution on the interval (0, 1). The distribution of their sum is triangular on (0, 2). ([ref](https://statistical-engineering.com/sums-random-variables/))
+
+![sums of random variables]({{img-url}}/sum.gif){:.w-750}
+*Check the [proof](https://statistical-engineering.com/sums-random-variables/).*
+
+</div>
+</li>
+</ul>
+
 
 
 ### Mean - Median - Mode
@@ -209,7 +239,7 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 **[??]**{:.tred} *Hiểu hai dấu bằng trên như thế nào?*
 
 - *Dấu bằng thứ 1*: ta sẽ xem xét sự khác biệt giữa X và giá trị trung bình (mong muốn) của nó xem sao. Tuy nhiên, có nhiều cái X khác nhau (thử tưởng tượng trường hợp rời rạc), nên ta phải lấy trung bình của nó.
-- *Dấu bằng thứ 2*: Liệu sau khi $X^2$ thì trung bình của nó có giống với trước khi nó bình phương hay không?
+- *Dấu bằng thứ 2*: Liệu sau khi $X^2$ thì trung bình của nó có giống với trước khi nó bình phương hay không? **$\Leftarrow$ Vẫn chưa thuyết phục!**{:.tred}
 
 ![Understand Bias and Variance]({{img-url}}/variance-bias.png){:.w-750}
 
@@ -229,6 +259,15 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
 DataFrame.hist(bins=10)
 #Make a histogram of the DataFrame and then check
 ~~~
+
+### Uniform Distribution
+
+- Also called *Rectangular Distribution* ([ref](https://www.mathsisfun.com/data/random-variables-continuous.html))
+- It has equal probability for all values of the Random variable between a and b:
+
+![Uniform distribution]({{img-url}}/uniform-distribution.svg){:.w-400}
+*The probability of any value between a and b is p*
+
 
 ### Normal distribution
 
@@ -278,7 +317,7 @@ $$
 $$
 </div>
 
-**[??]**{:.tred} *Dấu hiệu nhận biết của normal distribution là gì?*
+**[??]**{:.tred} *Dấu hiệu nhận biết của normal distribution là gì?* **$\Leftarrow$ Vẫn chưa thuyết phục!**{:.tred}
 
 - Nếu một biến ngẫu nhiên mà chưa được biết distribution gì thì ta thường dùng cái ND này!
 - Nhờ vào **Central Limit Theorem**, càng nhiều observations thì có khả năng cao X càng converge về ND.
@@ -322,7 +361,7 @@ np.random.normal(loc=0, scale=1.0, size=None)
 - **Expected value** (mean): $E = n\_{trials} \times p\_{success}$
 - **Variance**: $np(1-p)$ where $p$ is the proba of the success
 
-**[??]**{:.tred} *Why we have E and EX like above?*
+**[??]**{:.tred} *Why we have E and EX like above?* **$\Leftarrow$ Vẫn chưa thuyết phục!**{:.tred}
 
 - Expected: nếu ta tung đồng xu 100 lần, hẳn ta muốn thấy mặt ngửa 50% (= $n\times p$) số đó. Dễ hiểu!
 - Variance: 
@@ -349,7 +388,7 @@ $$
 - Định lý giới hạn trung tâm.
 - Def (ref to [brilliant](https://brilliant.org/wiki/central-limit-theorem/)): The central limit theorem is a theorem about **independent random variables**, which says roughly that the probability distribution of the average of independent random variables will **converge to a normal distribution**, as the number of observations increases. The somewhat surprising strength of the theorem is that (under certain natural conditions) there is essentially no assumption on the probability distribution of the variables themselves; the **theorem remains true no matter what the individual probability distributions are**.
 
-**[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/)
+**[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/) **$\Leftarrow$ Vẫn chưa xong!**{:.tred}
 
 
 
