--- a/_posts/stats/2019-08-13-stats-2.md
+++ b/_posts/stats/2019-08-13-stats-2.md
@@ -20,6 +20,12 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 </span>
 </div>
 
+## Conditional probabilities
+
+
+## Bayes' theorem
+
+
 ## p-value
 
 ## Pearson correlation
